--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="profile">
             <div class="pic">
-                <img src="src/images.jfif" alt="perfil_pic">
+                <img src="src/be.jpg" alt="perfil_pic">
             </div>
         </div>
 
